kubernetes/apps/kube-system/cilium/policies/allow-netbox-internal.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
# Netbox internal: netbox, postgresql and redis share the same Helm instance label
# and are the only pods allowed to talk to each other within the default namespace
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-netbox-internal
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: default
      app.kubernetes.io/instance: netbox
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: default
            app.kubernetes.io/instance: netbox
        # Periodic NetBox -> GLPI sync job (APIs over HTTP)
        - matchLabels:
            io.kubernetes.pod.namespace: default
            app.kubernetes.io/instance: netbox-glpi-sync
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: default
            app.kubernetes.io/instance: netbox
